--- a/resources/app-templates/leocdp-admin/modules/activation/campaign-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/campaign-list.html
@@ -57,7 +57,7 @@
                 'serverSide': false,
                 'serverMethod': 'POST',
                 'ajax': {
-                    url: baseAdminApi + '/cdp/campaigns/filter',
+                    url: baseLeoAdminUrl + '/cdp/campaigns/filter',
                     contentType: 'application/json',
                     beforeSend: function (request) {
                         request.setRequestHeader("leouss", usersession);
