--- a/resources/app-templates/leocdp-admin/modules/analytics/data-science-notebooks.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/data-science-notebooks.html
@@ -54,7 +54,7 @@
                 'serverSide': false,
                 'serverMethod': 'POST',
                 'ajax': {
-                    url: baseAdminApi + '/cdp/analytics360/notebooks',
+                    url: baseLeoAdminUrl + '/cdp/analytics360/notebooks',
                     contentType: 'application/json',
                     beforeSend: function (request) {
                         request.setRequestHeader("leouss", usersession);
