--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -191,7 +191,7 @@
     	var endReportDate = datetimeFilter.endFilterDate;
     	$('#endReportDate').text(new moment(endReportDate).format(defaultDateFormat))
         
-    	var urlStr = baseAdminApi + '/cdp/analytics360/dashboard-primary';
+    	var urlStr = baseLeoAdminUrl + '/cdp/analytics360/dashboard-primary';
     	
     	var dashboardFunnelOption = {
    	   		block: {
