--- a/resources/app-templates/leocdp-admin/modules/asset/category-list.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/category-list.html
@@ -41,7 +41,7 @@
                     [0, "asc"]
                 ],
                 "ajax": {
-                    "url": baseAdminApi + '/category/list-all',
+                    "url": baseLeoAdminUrl + '/category/list-all',
                     "type": "POST",
                     "contentType": 'application/x-www-form-urlencoded',
                     "data": function (d) {
