--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-editor.html
@@ -497,7 +497,7 @@
     
     var initProfileAvatarUploader = function (profileData) {
     	
-    	var defaultAvatarUrl = baseAdminApi + '/public/images/avatars/profile-default-avatar.png';
+    	var defaultAvatarUrl = baseLeoAdminUrl + '/public/images/avatars/profile-default-avatar.png';
     	var avatarUrl = '';
     	if(profileData.primaryAvatar === ''){
     		 avatarUrl = defaultAvatarUrl;
