--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -240,7 +240,7 @@
                 'ordering': false,
                 'serverMethod': 'POST',
                 'ajax': {
-                    url: baseAdminApi + '/cdp/profiles/filter',
+                    url: baseLeoAdminUrl + '/cdp/profiles/filter',
                     contentType: 'application/json',
                     beforeSend: function (request) {
                         request.setRequestHeader("leouss", usersession);
