--- a/resources/app-templates/leocdp-admin/modules/activation/campaign-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/campaign-editor.html
@@ -84,7 +84,7 @@
 <script>
 	
     var initCampaignEditor = initCampaignEditor || function(id) {
-    	var urlStr = baseAdminApi + '/cdp/campaign/get';
+    	var urlStr = baseLeoAdminUrl + '/cdp/campaign/get';
         LeoAdminApiUtil.callPostAdminApi(urlStr, { 'id': id }, function (json) {
             if (json.httpCode === 0 && json.errorMessage === '') {
         		// only super-admin role can remove the segment 
