--- a/resources/app-templates/leocdp-admin/modules/asset/item-post-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-post-editor.html
@@ -217,7 +217,7 @@
                 // off select post type  $('#postTypeSelectionDialog').modal({ focus: true })
                 postTypeSelectionCallback(1);//default post type is text
             }
-            var urlStr = baseAdminApi + '/item/get';
+            var urlStr = baseLeoAdminUrl + '/item/get';
 
             LeoAdminApiUtil.callPostAdminApi(urlStr, params, function (json) {
                 if (json.httpCode === 0 && json.errorMessage === '') {
@@ -341,7 +341,7 @@
         		});
                 
                 //done set data model, POST to API
-                var urlStr = baseAdminApi + '/item/save';
+                var urlStr = baseLeoAdminUrl + '/item/save';
                 LeoAdminApiUtil.callPostAdminApi(urlStr, itemData, function (json) {
                     if (json.httpCode === 0 && json.errorMessage === '') {
                         if (typeof callback === 'function') {
@@ -484,7 +484,7 @@
 
     function renderPostMediaInfo(fileUrl) {
         if(fileUrl.indexOf('http')<0){
-            fileUrl = window.baseAdminApi + fileUrl;
+            fileUrl = window.baseLeoAdminUrl + fileUrl;
         }
         if (fileUrl.indexOf('.png') > 0 || fileUrl.indexOf('.jpg') > 0) {            
             if (trixElement) {
