--- a/resources/app-templates/leocdp-admin/modules/asset/item-subscription-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-subscription-editor.html
@@ -218,7 +218,7 @@
                 // off select post type  $('#postTypeSelectionDialog').modal({ focus: true })
                 postTypeSelectionCallback(1);//default post type is text
             }
-            var urlStr = baseAdminApi + '/item/get';
+            var urlStr = baseLeoAdminUrl + '/item/get';
 
             LeoAdminApiUtil.callPostAdminApi(urlStr, params, function (json) {
                 if (json.httpCode === 0 && json.errorMessage === '') {
@@ -323,7 +323,7 @@
             }            
 
             //done set data model, POST to API
-            var urlStr = baseAdminApi + '/item/save';
+            var urlStr = baseLeoAdminUrl + '/item/save';
             LeoAdminApiUtil.callPostAdminApi(urlStr, postModel, function (json) {
                 if (json.httpCode === 0 && json.errorMessage === '') {
                     if (typeof callback === 'function') {
@@ -532,7 +532,7 @@
                 //related products
                 $('input[name="related_product_ids"]').parent().hide();
                 var paramObj = {'contentClass':'product'};
-                var url = window.baseAdminApi + '/item/by-content-class-and-keywords';
+                var url = window.baseLeoAdminUrl + '/item/by-content-class-and-keywords';
                 LeoAdminApiUtil.getSecuredData(url, paramObj, function (json) {
                     var stUrl = json.staticBaseUrl || '';
                     if (json.httpCode === 0 && json.errorMessage === '' && json.data) { 
@@ -589,7 +589,7 @@
 
     function renderPostMediaInfo(fileUrl) {
         if(fileUrl.indexOf('http')<0){
-            fileUrl = window.baseAdminApi + fileUrl;
+            fileUrl = window.baseLeoAdminUrl + fileUrl;
         }
         if (fileUrl.indexOf('.png') > 0 || fileUrl.indexOf('.jpg') > 0) {            
             if (trixElement && postType === 1) {
