--- a/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-list.html
@@ -66,7 +66,7 @@
                 'ordering': false,
                 'serverMethod': 'POST',
                 'ajax': {
-                    url: baseAdminApi + '/cdp/segments/filter',
+                    url: baseLeoAdminUrl + '/cdp/segments/filter',
                     contentType: 'application/json',
                     beforeSend: function (request) {
                         request.setRequestHeader("leouss", usersession);
