--- a/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
@@ -119,7 +119,7 @@
 
     var loadDataUserProfile = loadDataUserProfile || function(key) {
     	
-         var urlStr = baseAdminApi + '/user/get-info';
+         var urlStr = baseLeoAdminUrl + '/user/get-info';
          LeoAdminApiUtil.callPostAdminApi(urlStr, {
              'key': key || 'newuser'
          }, function (json) {
@@ -174,9 +174,9 @@
         userModel.customData.position = node.find('input[name="customData_position"]').val();
         userModel.customData.department = node.find('select[name="customData_department"]').val();
 
-        var urlStr = baseAdminApi + '/user/create';
+        var urlStr = baseLeoAdminUrl + '/user/create';
         if (typeof userModel.key === 'string') {
-            urlStr = baseAdminApi + '/user/update';
+            urlStr = baseLeoAdminUrl + '/user/update';
         }
 
         var onSaveOk = function (data) {
@@ -210,7 +210,7 @@
                     location.hash = "calljs-leoCdpRouter('User_Login_Management')";
                 }, 500);
             }
-            var urlStr = baseAdminApi + '/user/delete';
+            var urlStr = baseLeoAdminUrl + '/user/delete';
             LeoAdminApiUtil.callPostAdminApi(urlStr, userModel, function (json) {
                 if (json.httpCode === 0 && json.errorMessage === '') {
                     if (json.data === '') {
