--- a/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
@@ -56,7 +56,7 @@
             $('#user-list').DataTable({
                 "pageLength": 25,
                 "ajax": {
-                    "url": baseAdminApi + '/user/list-all',
+                    "url": baseLeoAdminUrl + '/user/list-all',
                     "type": "POST",
                     "contentType": 'application/x-www-form-urlencoded',
                     "data": function (d) {
