--- a/resources/app-templates/leocdp-admin/modules/asset/group-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/group-editor.html
@@ -89,7 +89,7 @@
             </div>
            
             <div class="action-div"  >
-                <label>Privacy </label>
+                <label>Access Privacy</label>
                 <div class="radio">
                     <label><input type="radio" name="privacyStatus" value="0">Public for everyone</label>
                 </div>
