--- a/resources/app-templates/leocdp-admin/modules/asset/group-list-in-category.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/group-list-in-category.html
@@ -18,7 +18,7 @@
                     <tr>
                         <th>Group Title</th>
                         <th>Group Information</th>
-                        <th>Privacy</th>
+                        <th>Access Privacy</th>
                         <th>Type</th>
                         <th>Creation Time</th>
                         <th>Modification Time</th>
@@ -28,7 +28,7 @@
                     <tr>
                         <th>Title</th>
                         <th>Description</th>
-                        <th>Privacy Status</th>
+                        <th>Access Privacy</th>
                         <th>Type</th>
                         <th>Creation Time</th>
                         <th>Modification Time</th>
