--- a/resources/app-templates/leocdp-admin/modules/asset/item-creative-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-creative-editor.html
@@ -132,7 +132,7 @@
             </div>
             <hr>
             <div class="action-div">
-                <label>Content Privacy</label>
+                <label>Access Privacy</label>
                 <div class="radio">
                     <label><input type="radio" name="privacyStatus" value="0">Public for everyone</label>
                 </div>
