--- a/resources/app-templates/leocdp-admin/modules/asset/item-post-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/asset/item-post-editor.html
@@ -146,7 +146,7 @@
             </div>
             <hr style="display: none">
             <div class="action-div">
-                <label>Content Privacy</label>
+                <label>Access Privacy</label>
                 <div class="radio">
                     <label><input type="radio" name="privacyStatus" value="0">Public for everyone</label>
                 </div>
