--- a/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-editor.html
@@ -59,7 +59,7 @@
                         <label><input type="radio" name="role" value="1" >STANDARD_USER</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="role" value="2">EDITOR</label>
+                        <label><input type="radio" name="role" value="2">OPERATION</label>
                     </div>
                     <div class="radio">
                         <label><input type="radio" name="role" value="3">ADMIN</label>
