--- a/resources/app-templates/leocdp-admin/modules/system/login-account-info.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-info.html
@@ -89,7 +89,7 @@
                         <label><input type="radio" name="role" value="1" disabled="disabled">STANDARD_USER</label>
                     </div>
                     <div class="radio">
-                        <label><input type="radio" name="role" value="2" disabled="disabled">EDITOR</label>
+                        <label><input type="radio" name="role" value="2" disabled="disabled">OPERATION</label>
                     </div>
                     <div class="radio">
                         <label><input type="radio" name="role" value="3" disabled="disabled">ADMIN</label>
