--- a/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
+++ b/resources/app-templates/leocdp-admin/modules/system/login-account-list.html
@@ -127,7 +127,7 @@
                             } else if (data == "3") {
                                 return 'ROLE_ADMIN';
                             } else if (data == "2") {
-                                return 'ROLE_EDITOR';
+                                return 'ROLE_OPERATION';
                             } else if (data == "1") {
                                 return 'ROLE_STANDARD_USER';
                             }
