prepare for new release 0.8.7.1

--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -39,6 +39,9 @@
 	#profileInSegments a {
 		color: #0000CD!important;
 	}
+	ol.profile_ext_data {
+		margin-left: 28px;
+	}
 </style>
 
 <div class="row">
@@ -605,7 +608,7 @@
 			 	<table border=0 class="underlined" style="width: 100%;">
                    <tr>
                        <td>
-							<ol id="profile_ext_data" data-field="personal_attributes">
+							<ol class="profile_ext_data" data-field="personal_attributes">
 								<li>
 				                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Personal ID and Contacts </b> 
 				                   <p data-field="personalContacts" data-fieldholder="html_hashmap" data-fieldtype="hashmap" id="personalContacts" > </p>
@@ -647,7 +650,7 @@
 			   <table border=0 class="underlined" style="width: 100%;">
                    <tr>
                        <td>
-							<ol id="profile_ext_data" data-field="personal_attributes">
+							<ol class="profile_ext_data" data-field="personal_attributes">
 				               	<li>
 				                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Job Titles </b> 
 				                   <p data-field="jobTitles" data-fieldholder="html_hashset"  data-fieldtype="hashset" data-editable="true"  >  </p>
@@ -673,7 +676,7 @@
 			   <table border=0 class="underlined" style="width: 100%;">
                    <tr>
                        <td>
-							<ol id="profile_ext_data" data-field="personal_attributes">
+							<ol class="profile_ext_data" data-field="personal_attributes">
 								<li>
 				                   <b data-persona="key" > <i class="fa fa-fw fa-list"></i> Keywords for Content Marketing  </b> 
 				                   <p data-field="contentKeywords" data-fieldholder="html_hashset"  data-fieldtype="hashmap"  > - </p>
