--- a/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-details.html
@@ -613,7 +613,7 @@
 		     		<div class="col-lg-12 ">
 		     			<label style="background-color: #FAFADE;color: #3300ff!important;" > <i class="fa fa-info-circle" aria-hidden="true"></i> Data Connectors </label>
 		     		</div>
-		     		<div class="col-lg-12" id="dataConnectorHolder" style="height: 250px;" >
+		     		<div class="col-lg-12" id="dataConnectorHolder" style="height: 250px;padding-left: 35px;" >
 		     			 <div class="radio">
 						  	<label for="c_sendinblue" ><input id="c_sendinblue" type="radio" value="sendinblue" name="dataconnector">SendInBlue Email Marketing Automation</label>
 						 </div>
