update for release 0.8.7.1

--- a/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
+++ b/resources/app-templates/leocdp-admin/modules/journey/customer-journey-flow.html
@@ -626,6 +626,8 @@
 					    	btnHtml += '><i class="fa fa-qrcode" style="font-size:1.3em" aria-hidden="true"></i> QR Code Image </button>';
 					    	return btnHtml;
 			    		}
+		    		} else {
+		    			return "<b>Auto Tracking</b>";
 		    		}
 		    	}
 		    	return "";
