--- a/resources/content-templates/simple-lead-form.html
+++ b/resources/content-templates/simple-lead-form.html
@@ -18,7 +18,7 @@
 		//(1) loading LEO OBSERVER JavaScript code for 
 		(function() {
 			// log tracking domain prefix
-			window.leoObserverLogDomain = "datahub4talentnet.leocdp.net";
+			window.leoObserverLogDomain = "demotrack.leocdp.net";
 			
 			// CDN domain prefix
 			window.leoObserverCdnDomain = "demo.leocdp.net/public";
